// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<div class="vue-draggable-resizable-stub video-scrubber__draggable" axis="x" drag-handle=".video-scrubber__handle" parent="" grid="4,1" x="0" y="0" w="auto" h="auto" style="width: 3px;">
  <div class="video-scrubber">
    <scrubber-icon-stub class="video-scrubber__handle" style="width: 15px;"></scrubber-icon-stub>
    <div class="video-scrubber__line"></div>
  </div>
</div>
`;

exports[`matches snapshot when currentFrameIndex is 2 1`] = `
<div class="vue-draggable-resizable-stub video-scrubber__draggable" axis="x" drag-handle=".video-scrubber__handle" parent="" grid="4,1" x="8" y="0" w="auto" h="auto" style="width: 3px;">
  <div class="video-scrubber">
    <scrubber-icon-stub class="video-scrubber__handle" style="width: 15px;"></scrubber-icon-stub>
    <div class="video-scrubber__line"></div>
  </div>
</div>
`;
